AM fields are no longer cutoff in time entry fields in certain browsers, fixes #688.

--- a/app/assets/stylesheets/objects/sheets.scss
+++ b/app/assets/stylesheets/objects/sheets.scss
@@ -93,8 +93,8 @@ select {
 
 .period-select-box {
   select.form-control {
-    width: 60px;
-    min-width: 60px;
+    width: 62px;
+    min-width: 62px;
   }
 }
 
